--- a/app/src/main/res/layout/activity_my.xml
+++ b/app/src/main/res/layout/activity_my.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -7,7 +8,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    android:background="@drawable/background"
+    android:background="@drawable/backgroundjotaro"
     tools:context=".MyActivity">
 
     <LinearLayout
@@ -24,9 +25,11 @@
             android:layout_height="wrap_content"/>
 
         <Button
+            android:id="@+id/genButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onNameClick"
+            android:visibility="gone"
             android:text="@string/reroll"/>
 
     </LinearLayout>
@@ -49,19 +52,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <ProgressBar
+        android:id="@+id/loadingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        android:layout_gravity="center_horizontal"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:alpha=".6"
-            android:src="@drawable/jotaro_portait" />
-        
+
+
         <Button
             android:id="@+id/redditButton"
             android:layout_width="wrap_content"
@@ -79,6 +83,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"/>
+
 
         <Button
             android:id="@+id/postButton"
