--- a/app/src/main/res/layout/dialog_signin.xml
+++ b/app/src/main/res/layout/dialog_signin.xml
@@ -34,4 +34,11 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="sans-serif"
         android:hint="@string/password"/>
+    <CheckBox
+        android:id="@+id/saveLoginCheckbox"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/abc_action_button_min_width"
+        android:text="@string/login_checkbox"
+        />
 </LinearLayout>
